# mcp-server-airhost

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
notifier/: .env.example  Dockerfile  main.py
scripts/: debug_csrf.py  debug_csrf2.py  debug_intercept.py  debug_preflights.py  debug_tenant.py  deploy_cloudrun.sh  deploy_notifier.sh  login_smoke.py  oauth_smoke.py  tools_smoke.py
src/airhost_mcp/: __init__.py  auth.py  config.py  oauth_server.py  server.py  tools.py  well_known.py
src/airhost_mcp/airhost/: __init__.py  base.py  browser_client.py  factory.py  http_client.py  mock.py
src/airhost_mcp/mfa/: __init__.py  base.py  factory.py  gmail.py  manual.py  pubsub.py
src/airhost_mcp/session/: __init__.py  base.py  factory.py  gcs.py  local.py
tests/: test_audit_log.py  test_gmail_mfa.py  test_mock_client.py  test_oauth.py
