[project]
name = "airhost-mcp"
version = "0.1.0"
description = "MCP server for Airhost. Designed to run on Cloud Run with OAuth 2.1 / Auth0."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "fastmcp>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0.1",
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.120.0",
    "google-cloud-storage>=2.16.0",
    "python-jose[cryptography]>=3.3.0",
    "beautifulsoup4>=4.12.3",
    "tenacity>=8.2.3",
    "playwright==1.58.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
airhost-mcp = "airhost_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airhost_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
